@@ -74,11 +74,14 @@
   <div class="actions">
     <% form_name = @sticky.new_record? ? 'new_sticky' : "edit_sticky_#{@sticky.id}" %>
     <%= link_to_function image_tag('contour/tick.png', :alt => '') + (@sticky.new_record? ? "Create Sticky" : "Update Sticky"), "$('##{form_name}').submit();", :class => "button positive" %>
-    <%= cancel %>
+    <% if params[:from_calendar] == '1' %>
+      <%= link_to image_tag('contour/cross.png', :alt => '') + 'Cancel', calendar_stickies_path(selected_date: @sticky.due_date.strftime('%m/%d/%Y')), :class => 'button negative' %>
+    <% else %>
+      <%= cancel %>
+    <% end %>
     <% if not @sticky.new_record? and current_user.all_stickies.include?(@sticky)  %>
       <% if @sticky.group %>
         <%= link_to_function image_tag('contour/delete.png', alt: '') + "Delete Sticky", "$('#delete-sticky-dialog_#{@sticky.id}').dialog('open'); return false;", class: 'button negative' %>
-        <%= render partial: 'delete_sticky_dialog', locals: { sticky: @sticky } %>
       <% else %>
         <%= link_to image_tag('contour/delete.png', :alt => '') + "Delete Sticky", sticky_path(@sticky, from_calendar: params[:from_calendar].to_i), :confirm => "Are you sure you want to delete Sticky #{@sticky.name}?", :method => :delete, :class => 'button negative' %>
       <% end %>
@@ -86,4 +89,7 @@
 		<br />
   </div>
 
+<% end %>
+<% if @sticky.group %>
+  <%= render partial: 'delete_sticky_dialog', locals: { sticky: @sticky } %>
 <% end %>
