@@ -1,3 +1,4 @@
+<strong><%= Date::MONTHNAMES[@selected_date.month] %> <%= @selected_date.year %></strong>
 <table style="width:100%;border-collapse:collapse;table-layout: fixed;"><%#= '<col width="14%"/>'*7 %>
   <thead>
     <tr>
