@@ -8,6 +8,7 @@
   * Sticky Completion emails now list other stickies in the same group
   * When a viewing a project page, the menu now contains links to that project's templates and frames
   * Deleting a sticky in a group now prompts the user to delete the single sticky, all following, or all stickies in the group
+  * Navigation between creating, updating, and deleting stickies and the calendar has been improved
 
 * Bug Fix
   * Daily stickies due email fixed to include weekday for items past due
